# loom

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  TODO.md
.github/workflows/: ci.yml
cmake/: FetchGoogleTest.cmake  FetchProtobuf.cmake  FetchReplxx.cmake  FetchSlang.cmake  FetchVerilator.cmake  FetchYosys.cmake  FetchYosysSlang.cmake
dkms/: .gitignore
dkms/xdma-dkms/: Makefile  README.md  dkms.conf
dkms/xdma-dkms/debian/: changelog  control  copyright  install  postinst  prerm  rules  xdma-dkms.udev
doc/: assertions.md  dpi-bridge-internals.md  dpi-bridge.md  e2e-test.md  emu-top.md  fpga-support.md  host-library.md  pass-pipeline.md  shutdown-spec.md
fpga/: .gitignore  Makefile  README.md
fpga/boards/u250/: settings.tcl  u250_dfx.xdc  u250_implementation.xdc  u250_pins.xdc  u250_timing.xdc
fpga/ip/xlnx_axi_clock_converter/tcl/: run.tcl
fpga/ip/xlnx_cdc/tcl/: run.tcl
fpga/ip/xlnx_clk_gen/tcl/: run.tcl
fpga/ip/xlnx_decoupler/tcl/: run.tcl
fpga/ip/xlnx_xdma/tcl/: run.tcl
fpga/scripts/: dfx_impl.tcl  dfx_program_flash.tcl  dfx_program_rm.tcl  dfx_rm.tcl  impl.tcl  pcie_rescan.sh  program.tcl  reports.tcl  synth.tcl  synth_rm.tcl  synth_static.tcl
frontend/: CMakeLists.txt
passes/: CMakeLists.txt
passes/dpi_bridge/: CMakeLists.txt  dpi_bridge.cc
passes/emu_top/: CMakeLists.txt  emu_top.cc
passes/loom_instrument/: CMakeLists.txt  loom_instrument.cc
passes/mem_scan_insert/: CMakeLists.txt  mem_scan_insert.cc
passes/mem_shadow/: CMakeLists.txt  mem_shadow.cc
passes/reset_extract/: CMakeLists.txt  reset_extract.cc
passes/scan_insert/: CMakeLists.txt  scan_insert.cc
rtl/: loom_clk_gate.sv  loom_host_if.sv  loom_host_stub.sv  loom_mem_scan_ctrl.sv  loom_scan_ctrl.sv
scripts/: gen_rtl_replay.py  loom_gen_sim.py
src/: loom_version.h.in
src/bfm/: loom_axil_socket_bfm.sv  loom_sock_dpi.c  xilinx_primitives.sv  xlnx_cdc.sv  xlnx_clk_gen.sv  xlnx_decoupler.sv  xlnx_xdma.sv
src/dpi/: loom_dpi_service.cpp  loom_dpi_service.h  loom_svdpi_array.h  svdpi_openarray.c
src/fpga/: loom_fpga_top.sv
src/host/: CMakeLists.txt  libloom.c  libloom.h  loom.cpp  loom.h  loom_dpi_service.c  loom_dpi_service.cpp  loom_dpi_service.h  loom_shell.cpp  loom_shell.h  loom_sim_main.c  loom_sim_main.cpp  loom_transport_socket.c  loom_transport_socket.cpp  loom_transport_xdma.cpp  loom_vpi.cpp  vpi_user.c  vpi_user.h
src/include/: svdpi.h
src/proto/: CMakeLists.txt  loom_snapshot.proto
src/rtl/: loom_axi4_err_slv.sv  loom_axi_interconnect.sv  loom_axil_demux.sv  loom_axil_firewall.sv  loom_clk_gate.sv  loom_dpi_regfile.sv  loom_emu_ctrl.sv  loom_emu_top_bb.sv  loom_emu_wrapper.sv  loom_icap_ctrl.sv  loom_mem_ctrl.sv  loom_scan_ctrl.sv  loom_shell.sv
src/test/: loom_sim_top.sv
src/test/firewall/: Makefile  README.md  fw_test_driver.c  fw_test_slave.sv  tb_axil_firewall.sv
src/tools/: CMakeLists.txt  loomc.cpp  loomx.cpp
src/util/: loom_log.h  loom_paths.h  sha256.h  toml_utils.h
src/util/mk/: loom.mk  loom_sim.mk  loom_test.mk
tests/: .gitignore  CMakeLists.txt
tests/axil_completeness/: Makefile  axil_completeness.sv  test_script.txt
tests/dpi_bridge/: run.ys
tests/dpi_fixed_array/: Makefile  dpi_fixed_array.sv  dpi_impl.c  run.ys
tests/dpi_open_array/: Makefile  dpi_impl.c  dpi_open_array.sv  run.ys
tests/e2e/: .gitignore  Makefile  dpi_impl.c  dpi_test.sv  run.sh  run.ys  sv_features.sv  test_main.c
tests/e2e_assert/: Makefile  assert_test.sv
tests/e2e_dpi_fifo/: Makefile  dpi_fifo_test.sv  dpi_impl.c
tests/e2e_icap_prog/: Makefile  gen_test_bit.py  icap_prog.sv  test_script.txt
tests/e2e_mem_shadow/: Makefile  dpi_impl.c  mem_shadow_dut.sv  rom_data.hex  test_script.txt
tests/e2e_scan_dump/: Makefile  debug_script.txt  debug_script2.txt  dpi_impl.c  scan_dump_test.sv  test_script.txt
tests/emu_top/: run.ys
tests/emu_top_e2e/: .gitignore  Makefile  tb_emu_top.sv  transform.ys
tests/fixtures/: dpi_example.sv  hierarchy.sv  mem_dut.sv  multi_clock.sv  sram.sv  tiny_dff.sv
tests/fsm_extract/: .gitignore  Makefile  basic_fsm.sv  gen_equiv.tcl  if_repeat_fsm.sv  multisim_pull_fsm.sv  multisim_pull_push_fsm.sv  multisim_rw_fsm.sv  run.ys  wait_fsm.sv
tests/initial_dpi/: Makefile  dpi_impl.c  initial_dpi_error_test.sv  initial_dpi_test.sv  test_script.txt
tests/loom_instrument/: run.ys
tests/mem_scan_e2e/: Makefile  mem_map.json  sim_mem_scan  tb_mem_scan.sv  transform_mem_dut.ys
tests/mem_shadow_e2e/: .gitignore  Makefile  mem_test.sv  tb_mem_shadow.sv  test_combined.ys  test_mem_shadow.ys
tests/mem_shadow_emu_top/: mem_dut.sv  run.ys
tests/multisim_read_write/: .gitignore  Makefile  multisim_server_pull_then_push.sv  sw_test.cpp  test.sv  top.sv
tests/multisim_read_write/multisim/socket_server/: client.cpp  client.h  server.cpp  server.h
tests/reset_extract/: reset_extract_test.sv  run.ys
tests/scan_basic/: run.ys
tests/scan_ctrl_e2e/: .gitignore  Makefile  counter.sv  scan_map_counter.json  tb_scan_counter.sv  transform_counter.ys
tests/scan_equiv/: run.ys
tests/shell_regaccess/: Makefile  run.ys  shell_regaccess.sv  test_script.txt
tests/snitch_hello/: Makefile  dpi_impl.c  fetch_deps.sh  snitch_hello_top.sv  sources.f  tb_ref.sv
tests/snitch_hello/sw/: crt0.S  hello.c  link.ld
