# Loom Yosys passes
# Each pass is built as a loadable plugin (.so)

# scan_insert pass - scan chain insertion
add_subdirectory(scan_insert)

# dpi_bridge pass - DPI-to-hardware bridge (placeholder for now)
# add_subdirectory(dpi_bridge)

# emu_top pass - top-level wrapper generation (placeholder for now)
# add_subdirectory(emu_top)
